--- a/src/components/list/Record.scss
+++ b/src/components/list/Record.scss
@@ -12,6 +12,9 @@
   visibility: visible;
 }
 
-table {
-  table-layout: auto !important;
+.ant-table-body {
+  min-height: 250px;
+  table {
+    table-layout: auto !important;
+  }
 }
