--- a/src/components/common/Record.scss
+++ b/src/components/common/Record.scss
@@ -26,3 +26,10 @@
 .ant-input-number.ant-input-number-lg {
   width: 140px;
 }
+
+.ant-empty {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
